versioned_docs/version-8.0/self-managed/optimize-deployment/migration-update/3.7-to-3.8.md
---
id: 3.7-to-3.8
title: "Update notes (3.7.x to 3.8.x)"
---

:::note Heads up!
To update Optimize to version 3.8.x, perform the following steps: [Migration & Update Instructions](./instructions.md).
:::

The update to 3.8.x can be performed from any 3.7.x release.

Here you will find information about:

- Limitations
- Known issues
- Changes in the supported environments
- Any unexpected behavior of Optimize (for example, due to a new feature)
- Changes in translation resources

## Known issues

No known issues at the moment.

## Changes in supported environments

### Camunda Platform 7

Optimize now requires at least Camunda Platform 7 `7.15.0` and supports up to `7.17.0+`. Camunda Platform 7 `7.14.x` is not supported anymore.
See the [supported environments](../../../../reference/supported-environments/#camunda-platform-7--optimize-version-matrix) sections for the full range of supported versions.

## New behavior

Due to a general overhaul in the public API, the authentication to all API requests must now be performed via a `Bearer Token` in the request header. In previous versions, you had two possible ways to authenticate your API requests: by providing the secret as the query parameter `accessToken`, or by providing it in the request header as a `Bearer Token`. If you were using the latter method, no change is necessary and your requests will keep working as usual. If you were using the query parameter method, you will need to change your requests. For more information, see [Authorization](../../../apis-clients/optimize-api/optimize-api-authorization.md).

## Changes in translation files

In case you manage your own translations into different languages, you can find a list below with all the changes that need to be translated for this release.

### Localization file

The following terms have been added/removed to/from the localization file (`en.json`) since the last release:

[en.json.diff](./translation-diffs/differences_localization_370_380.diff)

- lines with a `+` in the beginning mark the addition/update of a term, lines with a `-` mark the removal of a term

### Text from "What's new" dialogue

For the purposes of translation, find the text for the `What's new` dialog below:

```
## Set and Track Time-Based Goals

Set data-driven service level agreements (SLAs) on how long all your processes should take so you can quickly identify which processes are underperforming.

## KPI Reports

Create reports and alerts tracking percentages like fully automated instances or incident rate (%), plus SLA statistics on durations like P99 or P95 duration in addition to minimum, median, and maximum.

## Improved UX

Rename variables in plain language, filter out noisy outlier analysis heatmaps, and apply rolling date filters to your dashboards to focus on the most important data.

For more details, check out the [blog post](https://camunda.com/blog/2022/04/camunda-optimize-3-8-0-released/).
```
